# kuroo

./: ChangeLog  Doxyfile  kuroo-0.71.0.ebuild  kuroo-svn-0.ebuild  kuroo.kdevelop  kuroo.kdevses
kuroo/branches/0.80.0/src/: Makefile.am  common.h  kuroo.cpp  kuroo.desktop  kuroo.h  kuroo8.desktop  kuroo8ui.rc  kurooinit.cpp  kurooinit.h  kurooui.rc  kurooview.cpp  kurooview.h  kurooviewbase.ui  main.cpp  mainwindow.cpp  message.cpp  message.h  messagebase.ui  statusbar.cpp  statusbar.h  systemtray.cpp  systemtray.h
kuroo/branches/babali-dev/: CMakeLists.txt  README  kuroo.kdevelop
kuroo/branches/babali-dev/doc/: CMakeLists.txt
kuroo/branches/babali-dev/pics/: CMakeLists.txt
kuroo/branches/babali-dev/po/: CMakeLists.txt
kuroo/branches/babali-dev/sqlite/: CMakeLists.txt
kuroo/branches/babali-dev/src/: CMakeLists.txt  common.h  kuroo.cpp  kuroo.h  kurooinit.cpp  main.cpp
kuroo/branches/catapult-dbus_test/src/: Makefile.am  dbus_test1.cpp  dbus_test1.desktop  dbus_test1.h  dbus_test1.lsm  dbus_test1ui.rc  main.cpp
kuroo/branches/kuroolito/src/: Makefile.am  common.h  kuroo.cpp  kuroo.h  kurooiface.h  kurooinit.cpp  kurooinit.h  kuroolito.cpp  kuroolito.desktop  kuroolito.h  kuroolito_part.cpp  kuroolito_part.desktop  kuroolito_part.h  kuroolito_part.rc  kuroolito_partui.rc  kuroolito_shell.rc  kuroolito_shellui.rc  kuroolito_tng.desktop  kuroolitoui.rc  kurooview.cpp  kurooview.h  kurooviewbase.ui  main.cpp  mainwindow.cpp  mainwindow.h  singleton.h  statusbar.cpp  statusbar.h  systemtray.cpp  systemtray.h
kuroo/src/logs/: Makefile.am  logsbase.ui  logstab.cpp
kuroo/trunc/src/updates/: Makefile.am  updatelistview.cpp  updates.h  updatestab.cpp
kuroo/trunk/src/: Makefile.am  common.h  kuroo.cpp  kuroo.desktop  kurooinit.cpp  kurooinit.h  kurooview.cpp  kurooview.h  kurooviewbase.ui  main.cpp  mainwindow.cpp  message.cpp  message.h  statusbar.cpp  statusbar.h  systemtray.cpp  systemtray.h
kuroo/trunk/src/config/: Makefile.am  configdialog.cpp  configdialog.h  kuroo8config.kcfg  kurooconfig.kcfg  options1.ui  options2.ui  options6.ui  options7.ui
kuroo/trunk/src/core/: LoadPackageHardMaskJob.h  Makefile.am  cacheportagejob.cpp  cacheportagejob.h  categorieslistview.cpp  categorieslistview.h  dependatom.cpp  emerge.cpp  emerge.h  etcupdate.cpp  etcupdate.h  filewatcher.cpp  global.cpp  global.h  images.h  inspectorbase.ui  package.h  packageinspector.cpp  packageinspector.h  packageitem.cpp  packageitem.h  packagelistview.cpp  packagelistview.h  packageversion.cpp  portagedb.cpp  portagedb.h  portagefiles.cpp  portagefiles.h  scanhistoryjob.cpp  scanhistoryjob.h  scaninstalledjob.cpp  scanportagejob.cpp  scanportagejob.h  scanupdatesjob.cpp  scanupdatesjob.h  signalist.cpp  signalist.h  threadweaver.cpp  tooltip.cpp  versionview.cpp  (+1 more)
kuroo/trunk/src/history/: Makefile.am  history.cpp  history.h  historybase.ui  historylistview.cpp  historylistview.h  historytab.cpp  historytab.h  mergebase.ui  mergelistview.cpp  mergelistview.h  mergetab.cpp  mergetab.h
kuroo/trunk/src/intro/: Makefile.am  intro.ui  introdlg.cpp  introdlg.h
kuroo/trunk/src/logs/: Makefile.am  diskusage.cpp  diskusage.h  emergelogdlg.cpp  log.cpp  logstab.cpp
kuroo/trunk/src/portage/: Makefile.am  inspectorbase.ui  installed.cpp  packageinspector.cpp  packageinspector.h  portage.cpp  portage.h  portagebase.ui  portagelistview.cpp  portagepackagesview.h  portagetab.cpp  portagetab.h  uninstallinspector.h  usedialog.cpp
kuroo/trunk/src/queue/: Makefile.am  emergeinspector.h  emergeoptions.ui  pretendinspector.cpp  queue.cpp  queue.h  queuebase.ui  queuelistview.cpp  queuelistview.h  queuetab.cpp  queuetab.h  resultlistview.cpp  resultlistview.h  results.cpp  results.h  resultsbase.ui
kuroo/trunk/src/results/: Makefile.am  results.cpp  resultsbase.ui
kuroo/trunk/src/updates/: updatesbase.ui
kuroo4/: .ignore  CMakeLists.txt  TODO  kuroo.h  kuroo.kcfg  makebranch.sh
kuroo4/branches/kuroo4-0.90.1/: trunk.kdev4
kuroo4/branches/kuroo4-0.90.1/po/: it.po
kuroo4/branches/kuroo4-0.90.1/src/: systemtray.h
kuroo4/history/: history.cpp  history.h  historybase.ui
kuroo4/icons/: .directory
kuroo4/log/: CMakeLists.txt  log.h  logbase.ui
kuroo4/package/: CMakeLists.txt  package.cpp  package.h
kuroo4/portage/: CMakeLists.txt  emerge.cpp  emerge.h  scan.cpp  scan.h
kuroo4/queue/: queue.h  queuebase.ui
kuroo4/tags/kuroo-0.90.0/src/: CMakeLists.txt  messagebase.ui
kuroo4/tags/kuroo4-0.90.0/src/: statusbar.cpp  statusbar.h
kuroo4/tags/kuroo4-0.90.1/src/: message.h
kuroo4/tags/kuroo4-0.90.2/po/: pl.po  ru.po
kuroo4/tags/kuroo4-0.90.2/src/: common.h  main.cpp
kuroo4/tags/kuroo4-0.90.4/src/: kuroo.cpp
kuroo4/tags/kuroo4-0.90.5/po/: fr.po
kuroo4/tags/kuroo4-0.90.5/src/: kuroo.h  main.cpp  message.cpp
kuroo4/trunk/: CMakeLists.txt  kuroo-0.90.5.ebuild  kuroo-9999.ebuild  kuroo.kdevelop
kuroo4/trunk/pics/: CMakeLists.txt
kuroo4/trunk/po/: CMakeLists.txt  de.po  es.po  nb.po  pl.po
kuroo4/trunk/src/: CMakeLists.txt  common.h  kuroo.cpp  kuroo.desktop  kuroo.h  kurooinit.cpp  kurooinit.h  kurooview.cpp  kurooview.h  kurooviewbase.ui  main.cpp  mainwindow.cpp  mainwindow.h  message.cpp  message.h  messagebase.ui  statusbar.cpp  statusbar.h  systemtray.cpp  systemtray.h
kuroo4/trunk/src/auth/: kuroohelper.cpp  kuroohelper.h  org.gentoo.portage.kuroo.actions
kuroo4/trunk/src/config/: Makefile.am  configdialog.cpp  configdialog.h  kurooconfig.kcfg  options1.ui  options2.ui  options3.ui  options4.ui  options7.ui  options8.ui
kuroo4/trunk/src/core/: LoadPackageHardMaskJob.h  LoadPackageKeywordsJob.h  LoadPackageUseJob.h  LoadPackageUserHardMaskJob.h  (+47 more)
kuroo_rewrite/trunk/history/: CMakeLists.txt
kuroo_rewrite/trunk/queue/: CMakeLists.txt  queue.cpp
kuroo_watcher/src/: Makefile.am
kuroo_watcher/src/config/: Makefile.am
kuroo_watcher/trunk/src/: Makefile.am  gentooagent.cpp  gentooagent.h  gentoowatcher.cpp  gentoowatcher.h  gentoowatcherbase.ui  kuroo_watcher.cpp  kuroo_watcher.desktop  kuroo_watcher_autostart.desktop  watcher_portagedb.cpp  watcher_portagedb.h
(+1446 files in other folders)
