INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/src/config \
	-I$(top_srcdir)/src/core -I$(top_srcdir)/src/intro -I$(top_srcdir)/src/logs \
	-I$(top_srcdir)/src/portage -I$(top_srcdir)/src/queue -I$(top_builddir)/src/core \
	-I$(top_builddir)/src/config $(all_includes)

METASOURCES = AUTO

noinst_LTLIBRARIES = libintro.la

libintro_la_SOURCES = intro.ui introdlg.cpp

noinst_HEADERS = introdlg.h

